--- a/package.json
+++ b/package.json
@@ -58,34 +58,34 @@
   },
   "homepage": "https://fengyuanchen.github.io/datepicker",
   "devDependencies": {
-    "@babel/core": "^7.3.3",
-    "@babel/preset-env": "^7.3.1",
+    "@babel/core": "^7.3.4",
+    "@babel/preset-env": "^7.3.4",
     "@commitlint/cli": "^7.5.2",
     "@commitlint/config-conventional": "^7.5.0",
     "cpy-cli": "^2.0.0",
     "create-banner": "^1.0.0",
     "cssnano": "^4.1.10",
     "del-cli": "^1.1.0",
-    "eslint": "^5.14.1",
+    "eslint": "^5.15.1",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.16.0",
     "husky": "^1.3.1",
     "jquery": "^3.3.1",
-    "lint-staged": "^8.1.4",
+    "lint-staged": "^8.1.5",
     "node-qunit-phantomjs": "^2.0.1",
     "npm-run-all": "^4.1.5",
-    "postcss-cli": "^6.1.1",
+    "postcss-cli": "^6.1.2",
     "postcss-header": "^1.0.0",
     "postcss-import": "^12.0.1",
-    "postcss-preset-env": "^6.5.0",
-    "rollup": "^1.2.2",
+    "postcss-preset-env": "^6.6.0",
+    "rollup": "^1.5.0",
     "rollup-plugin-babel": "^4.3.2",
-    "rollup-plugin-commonjs": "^9.2.0",
-    "rollup-plugin-node-resolve": "^4.0.0",
+    "rollup-plugin-commonjs": "^9.2.1",
+    "rollup-plugin-node-resolve": "^4.0.1",
     "rollup-watch": "^4.3.1",
     "stylelint": "^9.10.1",
     "stylelint-config-standard": "^18.2.0",
-    "stylelint-order": "^2.0.0",
+    "stylelint-order": "^2.1.0",
     "uglify-js": "^3.4.9"
   },
   "peerDependencies": {
@@ -125,5 +125,8 @@
       "{dist,docs}/**/*.js",
       "*.min.*"
     ]
+  },
+  "dependencies": {
+    "qunit": "^2.9.2"
   }
 }
